--- a/ai_chatbot_restful/pom.xml
+++ b/ai_chatbot_restful/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>	<!-- dependency for lombok -->
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.38</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
